added admission page and crud API's for that
